@@ -2,6 +2,7 @@
   1. Proxy server reconnects now bypass conn-spam blocks
   2. New Save vs Polymorph saving throw, also applies to petrification
   3. New Spell: Resist Polymorph
+  4. New thief skill: Garrote
 
 # Build 5.11.0 Release 10/23/2025
   1. CoffeeMud now has an optional Proxy server.  See installation guide.
